--- a/app/src/main/res/layout/drawer_row.xml
+++ b/app/src/main/res/layout/drawer_row.xml
@@ -7,6 +7,8 @@
     android:clickable="true"
     android:background="?attr/selectableItemBackground">
 
+    <!--android:background="?attr/selectableItemBackground"-->
+
     <ImageView
         android:id="@+id/drawer_list_icon"
         android:layout_marginLeft="16dp"
