--- a/materialList/src/main/res/values/styles.xml
+++ b/materialList/src/main/res/values/styles.xml
@@ -4,6 +4,7 @@
         <item name="android:orientation">vertical</item>
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">match_parent</item>
+        <item name="android:padding">8dp</item>
     </style>
 
     <style name="MainCardView">
