--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,7 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:fitsSystemWindows="true"
     android:clipToPadding="false"
+    android:background="@color/md_light_green_500"
     tools:context=".MainActivity">
 
 </RelativeLayout>
