--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -22,4 +22,11 @@
         <item name="android:textColor">@color/md_black_1000</item>
     </style>
 
+    <style name="McShopLoginTheme" parent="AppTheme">
+        <item name="android:textColor">@color/md_white_1000</item>
+        <item name="colorControlNormal">@color/md_white_1000</item>
+        <item name="colorControlActivated">@color/md_white_1000</item>
+        <item name="colorControlHighlight">@color/md_white_1000</item>
+    </style>
+
 </resources>
