--- a/app/src/main/res/layout/fragment_navigation_drawer.xml
+++ b/app/src/main/res/layout/fragment_navigation_drawer.xml
@@ -21,6 +21,30 @@
             android:layout_height="@dimen/app_bar_top_padding"
             android:layout_alignParentTop="true"
             android:background="#B6000000"/>
+        <TextView
+            android:id="@+id/username_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:textColor="@color/md_white_1000"
+            android:textIsSelectable="true"
+            android:textSize="24dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginBottom="36dp"/>
+        <TextView
+            android:id="@+id/money_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:textColor="@color/md_white_1000"
+            android:textIsSelectable="true"
+            android:textSize="12dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginBottom="16dp"/>
     </RelativeLayout>
 
     <android.support.v7.widget.RecyclerView
