--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,9 +2,10 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
-    <dimen name="nav_drawer_width">280dp</dimen>
+    <dimen name="nav_drawer_width">296dp</dimen>
     <dimen name="app_bar_top_padding">0dp</dimen>
     <dimen name="drawer_margin_top">23dp</dimen>
 
     <dimen name="elevation_app_bar">4dp</dimen>
+    <dimen name="elevation_navigation_drawer">16dp</dimen>
 </resources>
