--- a/app/src/main/res/layout/fragment_shop_group.xml
+++ b/app/src/main/res/layout/fragment_shop_group.xml
@@ -3,13 +3,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.kana2011.mcshop.ShopGroupFragment">
+    tools:context="com.kana2011.mcshop.shop.ShopGroupFragment">
 
-    <com.dexafree.materialList.view.MaterialListView
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:padding="8dp"
-        android:clipToPadding="false"
-        android:id="@+id/material_listview"/>
+    <android.support.v7.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/cards_list"/>
 
 </FrameLayout>
