--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,4 +8,6 @@
 
     <dimen name="elevation_app_bar">4dp</dimen>
     <dimen name="elevation_navigation_drawer">16dp</dimen>
+
+    <dimen name="card_spacing">8dp</dimen>
 </resources>
