--- a/app/src/main/res/layout/app_bar.xml
+++ b/app/src/main/res/layout/app_bar.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/md_light_green_500"
+    android:background="@color/md_light_blue_500"
     app:theme="@style/McShopToolbarTheme"
     app:popupTheme="@style/McShopToolbarPopupTheme">
 
