--- a/app/src/main/res/layout/fragment_shop.xml
+++ b/app/src/main/res/layout/fragment_shop.xml
@@ -8,7 +8,7 @@
         android:id="@+id/tabs"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/md_light_green_500"/>
+        android:background="@color/md_light_blue_500"/>
 
     <android.support.v4.view.ViewPager
         android:id="@+id/pager"
