--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,8 +6,9 @@
     </style>
 
     <style name="AppTheme.Base" parent="Theme.AppCompat.Light.NoActionBar">
-        <item name="colorPrimary">@color/md_light_green_500</item>
-        <item name="colorPrimaryDark">@color/md_light_green_700</item>
+        <item name="colorPrimary">@color/md_light_blue_500</item>
+        <item name="colorPrimaryDark">@color/md_light_blue_700</item>
+        <item name="colorAccent">@color/md_yellow_500</item>
     </style>
 
     <style name="McShopToolbarTheme" parent="ThemeOverlay.AppCompat.Dark">
