--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,7 +8,7 @@
     <style name="AppTheme.Base" parent="Theme.AppCompat.Light.NoActionBar">
         <item name="colorPrimary">@color/md_light_blue_500</item>
         <item name="colorPrimaryDark">@color/md_light_blue_700</item>
-        <item name="colorAccent">@color/md_yellow_500</item>
+        <item name="colorAccent">@color/md_amber_500</item>
     </style>
 
     <style name="McShopToolbarTheme" parent="ThemeOverlay.AppCompat.Dark">
