--- a/app/src/main/res/layout/item_card.xml
+++ b/app/src/main/res/layout/item_card.xml
@@ -1,17 +1,18 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="89dp"
-    android:background="@color/md_white_1000">
+    android:layout_height="88dp"
+    android:drawSelectorOnTop="true"
+    android:clickable="true"
+    android:background="?attr/selectableItemBackground">
 
-    <!--ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <ImageView
+        android:layout_width="88dp"
+        android:layout_height="88dp"
+        android:src="@drawable/ic_material"
         android:id="@+id/item_photo"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginRight="16dp"
-        android:layout_marginEnd="16dp" /-->
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -22,11 +23,5 @@
         android:paddingTop="16dp"
         android:paddingLeft="16dp"
         android:textColor="@color/md_black_1000"/>
-    
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:layout_alignParentBottom="true"
-        android:background="@color/md_grey_300"/>
 
 </RelativeLayout>
