--- a/app/src/main/res/layout/activity_shop_detail.xml
+++ b/app/src/main/res/layout/activity_shop_detail.xml
@@ -8,7 +8,7 @@
     <ImageView
         android:id="@+id/item_photo"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="412dp"
         android:src="@drawable/ic_material"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
@@ -28,8 +28,32 @@
         android:background="@drawable/dropshadow"
         android:layout_below="@id/tint"
         app:theme="@style/McShopToolbarTheme"
-        app:popupTheme="@style/McShopToolbarPopupTheme">
+        app:popupTheme="@style/McShopToolbarPopupTheme"/>
 
-    </android.support.v7.widget.Toolbar>
+    <TextView
+        android:id="@+id/item_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:padding="16dp"
+        android:textSize="24sp"
+        android:textColor="@color/md_black_1000"
+        android:layout_below="@+id/item_photo"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_shopping_cart"
+        android:layout_marginTop="-32dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_below="@+id/item_photo"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        app:elevation="6dp"
+        app:pressedTranslationZ="12dp"
+        app:borderWidth="0dp"/>
 
 </RelativeLayout>
