--- a/app/src/main/res/layout/activity_shop_detail.xml
+++ b/app/src/main/res/layout/activity_shop_detail.xml
@@ -5,14 +5,65 @@
     android:layout_height="match_parent"
     tools:context="com.kana2011.mcshop.shop.ShopDetailActivity">
 
-    <ImageView
-        android:id="@+id/item_photo"
+    <com.kana2011.mcshop.libs.ObservableScrollView
+        android:id="@+id/scroll_view"
         android:layout_width="match_parent"
-        android:layout_height="412dp"
-        android:src="@drawable/ic_material"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"/>
+        android:layout_height="match_parent"
+        android:fillViewport="true">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <ImageView
+                android:id="@+id/item_photo"
+                android:layout_width="match_parent"
+                android:layout_height="412dp"
+                android:src="@drawable/ic_material"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"/>
+
+            <android.support.design.widget.FloatingActionButton
+                android:id="@+id/fab"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_shopping_cart"
+                android:layout_marginTop="-32dp"
+                android:layout_marginRight="16dp"
+                android:layout_marginEnd="16dp"
+                android:layout_below="@id/item_photo"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentEnd="true"
+                app:elevation="6dp"
+                app:pressedTranslationZ="12dp"
+                app:borderWidth="0dp"
+                android:visibility="invisible"/>
+
+            <RelativeLayout
+                android:id="@+id/item_info"
+                android:layout_width="match_parent"
+                android:layout_height="1000dp"
+                android:layout_below="@id/item_photo"
+                android:background="@color/md_black_1000"
+                android:visibility="invisible">
+
+                <TextView
+                    android:id="@+id/item_name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:padding="16dp"
+                    android:textSize="24sp"
+                    android:textColor="@color/md_black_1000"
+                    android:layout_alignParentTop="true"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentStart="true" />
+
+            </RelativeLayout>
+
+        </RelativeLayout>
+
+    </com.kana2011.mcshop.libs.ObservableScrollView>
 
     <View
         android:id="@+id/tint"
@@ -29,42 +80,5 @@
         android:layout_below="@id/tint"
         app:theme="@style/McShopToolbarTheme"
         app:popupTheme="@style/McShopToolbarPopupTheme"/>
-
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/ic_shopping_cart"
-        android:layout_marginTop="-32dp"
-        android:layout_marginRight="16dp"
-        android:layout_marginEnd="16dp"
-        android:layout_below="@id/item_photo"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        app:elevation="6dp"
-        app:pressedTranslationZ="12dp"
-        app:borderWidth="0dp"
-        android:visibility="invisible"/>
-
-    <RelativeLayout
-        android:id="@+id/item_info"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@id/item_photo"
-        android:background="@color/md_black_1000"
-        android:visibility="invisible">
-
-        <TextView
-            android:id="@+id/item_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding="16dp"
-            android:textSize="24sp"
-            android:textColor="@color/md_black_1000"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true" />
-
-    </RelativeLayout>
 
 </RelativeLayout>
