--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -679,5 +679,5 @@
     <color name="md_falcon_500_75">#c0384e77</color>
     <color name="md_falcon_A400_25">#40598bae</color>
 
-    <color name="md_statusbar_translucent">#4000</color>
+    <color name="md_status_bar_translucent">#50000000</color>
 </resources>
