--- a/app/src/main/res/layout/activity_shop_detail.xml
+++ b/app/src/main/res/layout/activity_shop_detail.xml
@@ -18,34 +18,19 @@
             <ImageView
                 android:id="@+id/item_photo"
                 android:layout_width="match_parent"
-                android:layout_height="412dp"
+                android:layout_height="206dp"
+                android:scaleType="centerCrop"
                 android:src="@drawable/ic_material"
                 android:layout_alignParentTop="true"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"/>
-
-            <android.support.design.widget.FloatingActionButton
-                android:id="@+id/fab"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/ic_shopping_cart"
-                android:layout_marginTop="-32dp"
-                android:layout_marginRight="16dp"
-                android:layout_marginEnd="16dp"
-                android:layout_below="@id/item_photo"
-                android:layout_alignParentRight="true"
-                android:layout_alignParentEnd="true"
-                app:elevation="6dp"
-                app:pressedTranslationZ="12dp"
-                app:borderWidth="0dp"
-                android:visibility="invisible"/>
 
             <RelativeLayout
                 android:id="@+id/item_info"
                 android:layout_width="match_parent"
                 android:layout_height="1000dp"
                 android:layout_below="@id/item_photo"
-                android:background="@color/md_black_1000"
+                android:background="@color/md_grey_100"
                 android:visibility="invisible">
 
                 <TextView
@@ -58,6 +43,17 @@
                     android:layout_alignParentTop="true"
                     android:layout_alignParentLeft="true"
                     android:layout_alignParentStart="true" />
+
+                <Button
+                    android:id="@+id/buy_button"
+                    android:layout_width="120dp"
+                    android:layout_height="wrap_content"
+                    android:text="@string/get"
+                    android:textColor="@color/md_white_1000"
+                    android:layout_margin="12dp"
+                    android:padding="12dp"
+                    android:layout_alignParentRight="true"
+                    android:layout_alignParentEnd="true" />
 
             </RelativeLayout>
 
