--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -11,6 +11,8 @@
             @transition/change_image_transform</item>
         <item name="android:windowSharedElementExitTransition">
             @transition/change_image_transform</item>
+
+        <item name="android:colorButtonNormal">@color/md_green_500</item>
     </style>
 
 </resources>
