--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,6 +9,7 @@
         <item name="colorPrimary">@color/md_light_blue_500</item>
         <item name="colorPrimaryDark">@color/md_light_blue_700</item>
         <item name="colorAccent">@color/md_amber_500</item>
+        <item name="colorButtonNormal">@color/md_green_500</item>
     </style>
 
     <style name="McShopToolbarTheme" parent="ThemeOverlay.AppCompat.Dark">
