--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,29 +9,12 @@
     android:background="@color/colorPrimary"
     tools:context=".MainActivity">
 
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
+    <ImageView
+        android:layout_width="128dp"
+        android:layout_height="128dp"
+        android:id="@+id/imageView"
+        android:src="@drawable/ic_mcshop"
         android:layout_centerHorizontal="true"
-        android:orientation="vertical">
-
-        <ProgressBar
-            style="?android:attr/progressBarStyle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/progressBar"
-            android:indeterminate="true"
-            android:layout_gravity="center_horizontal"/>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="mcShop"
-            android:paddingTop="16dp"
-            android:textSize="24sp"
-            android:textColor="@color/md_white_1000"
-            android:layout_gravity="center_horizontal"/>
-    </LinearLayout>
+        android:layout_centerVertical="true"/>
 
 </RelativeLayout>
