--- a/app/src/main/res/layout/activity_shop_detail.xml
+++ b/app/src/main/res/layout/activity_shop_detail.xml
@@ -21,6 +21,7 @@
             app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
             <ImageView
+                android:id="@+id/item_photo"
                 android:src="@drawable/ic_material"
                 app:layout_scrollFlags="scroll|enterAlways|enterAlwaysCollapsed"
                 android:layout_width="match_parent"
